# melotts.axera

./: README.md  download_models.sh
cpp/: CMakeLists.txt  build.sh  melotts.cpp  melotts_encoder_calib.tgz  nncase_riscv64_build.sh  nncase_x86_64_build.sh  riscv64_build.sh  x86_64_build.sh
cpp/onnxruntime/lib/pkgconfig/: libonnxruntime.pc
cpp/onnxruntime/riscv64/lib/: libonnxruntime.so.1
cpp/riscv64_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  melotts
cpp/riscv64_build/install/: melotts
cpp/riscv64_build/install/cmake/onnxruntime/: onnxruntimeTargets-release.cmake  onnxruntimeTargets.cmake
cpp/src/: EngineWrapper.cpp  EngineWrapper.hpp  Lexicon.hpp  NncaseWrapper.hpp  OnnxWrapper.cpp  OnnxWrapper.hpp
cpp/src/utils/: io.hpp
model_convert/: README.md  config_decoder_u16.json  config_encoder_u16.json  config_flow_u16.json  convert.py  generate_data.py  infer.py  requirements.txt
model_convert/melotts/: commons.py  download_utils.py  models.py  modules.py  split_utils.py  tts.py
model_convert/melotts/text/: cleaner.py  english.py
models/: melo_lexicon_zh.txt  melo_tokens.txt
python/: melotts.py  melotts_onnx.py  onnx_infer_stream.py  requirements.txt  symbols.py  utils.py
python/axengine/: _handle.py
python/text/: __init__.py  chinese_mix.py  cleaner.py  english.py  french.py  japanese.py  korean.py  spanish.py
